--- a/app/views/sites/index.html.slim
+++ b/app/views/sites/index.html.slim
@@ -1,8 +1,9 @@
-h1 Listing sites
+h3 Listing sites
 
-table
+table.table.table-striped.table-hover
   thead
     tr
+      th Id
       th Domain
       th Name
       th Url
@@ -13,6 +14,7 @@ table
   tbody
     - @sites.each do |site|
       tr
+        td = site.id
         td = site.domain
         td = site.name
         td = site.url
@@ -22,5 +24,10 @@ table
         td = link_to 'Pages', site_pages_path(site)
 
 br
+
+= 
+= form_tag 'detect_unuse_sites_path', method: 'post', multipart: true do
+  = file_field :fileupload, :file
+  = submit_tag 'Send file'
 
 = link_to 'New Site', new_site_path
